--- a/src/main/resources/assets/admin/common/styles/reset.less
+++ b/src/main/resources/assets/admin/common/styles/reset.less
@@ -112,22 +112,7 @@ button {
     &:focus {
       outline-width: 2px;
       outline-style: auto;
-      -moz-outline-radius: 3px;
     }
-  }
-}
-
-div {
-  &:not([tabindex="-1"]) {
-    &:focus {
-      outline-offset: -1px;
-    }
-  }
-}
-
-input {
-  &:focus {
-    outline-offset: 0;
   }
 }
 
